Add logo font to typography style

--- a/frontend/src/assets/style/setup/_typography.scss
+++ b/frontend/src/assets/style/setup/_typography.scss
@@ -1,4 +1,4 @@
 @font-face {
     font-family: jersey;
-    src: url("/src/assets/fonts/Jersey15-Regular.ttf");
+    src: url("../../fonts/Jersey15-Regular.ttf");
 }
