--- a/frontend/src/assets/style/setup/_typography.scss
+++ b/frontend/src/assets/style/setup/_typography.scss
@@ -2,3 +2,23 @@
     font-family: jersey;
     src: url("../../fonts/Jersey15-Regular.ttf");
 }
+
+@font-face {
+    font-family: cp-bold;
+    src: url('../../fonts/CourierPrime-Bold.ttf');
+}
+
+@font-face {
+    font-family: cp-bold-italic;
+    src: url('../../fonts/CourierPrime-BoldItalic.ttf');
+}
+
+@font-face {
+    font-family: cp-reg;
+    src: url('../../fonts/CourierPrime-Regular.ttf');
+}
+
+@font-face {
+    font-family: cp-italic;
+    src: url('../../fonts/CourierPrime-Italic.ttf');
+}
