Add font awesome solid version font to fonts

--- a/frontend/src/assets/style/setup/_typography.scss
+++ b/frontend/src/assets/style/setup/_typography.scss
@@ -22,3 +22,8 @@
     font-family: cp-italic;
     src: url('../../fonts/CourierPrime-Italic.ttf');
 }
+
+@font-face {
+    font-family: fa-solid;
+    src: url('../../fonts/fa-solid-900.ttf');
+}
