--- a/frontend/src/app/cmps/app-header/app-header.component.scss
+++ b/frontend/src/app/cmps/app-header/app-header.component.scss
@@ -1,58 +1,64 @@
 @import '../../../assets/style/setup/mixins';
 
-.discount-alert {
-    background-color: var(--primary-clr1);
-    text-align: center;
-    padding: .5rem;
-}
+:host {
+  grid-column: 1 / 4;  
 
-.buttons-logo-container {
-    position: relative;
-    background-color: var(--white);
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 3fr max-content 1fr;
+    .app-header {
 
-    .logo {
-        font-family: jersey, Tahoma;
-        text-shadow: 2px 2px 0 #bcbcbc, 4px 4px 0 #9c9c9c;
-        font-size: 2em;
-        padding-inline-start: 1rem;
-    }
-
-    form {
-        position: relative;
-
-
-        input {
-            padding: .5em;
-            position: absolute;
-            width: 100%;
-
-            &:focus {
-                outline: none;
-                border: 1px solid var(--primary-clr1);
-            }
+        .discount-alert {
+            background-color: var(--primary-clr1);
+            text-align: center;
+            padding: .5rem;
         }
 
-        .search-btn {
-            border: none;
-            position: absolute;
-            right: .3rem;
-            
-            &:hover {
-                background-color: var(--white);
+        .buttons-logo-container {
+            position: relative;
+            background-color: var(--white);
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr 3fr max-content 1fr;
+
+            .logo {
+                font-family: jersey, Tahoma;
+                text-shadow: 2px 2px 0 #bcbcbc, 4px 4px 0 #9c9c9c;
+                font-size: 2em;
+                padding-inline-start: 1rem;
             }
 
-            &::before {
-                content: "\f002";
-                font-family: fa-solid;
-                font-weight: lighter;
+            form {
+                position: relative;
+
+
+                input {
+                    padding: .5em;
+                    position: absolute;
+                    width: 100%;
+
+                    &:focus {
+                        outline: none;
+                        border: 1px solid var(--primary-clr1);
+                    }
+                }
+
+                .search-btn {
+                    border: none;
+                    position: absolute;
+                    right: .3rem;
+
+                    &:hover {
+                        background-color: var(--white);
+                    }
+
+                    &::before {
+                        content: "\f002";
+                        font-family: fa-solid;
+                        font-weight: lighter;
+                    }
+                }
+            }
+
+            button {
+                @include buttons2;
             }
         }
-
-    }
-
-    button {
-        @include buttons2;
     }
 }
