--- a/frontend/src/assets/style/setup/_variables.scss
+++ b/frontend/src/assets/style/setup/_variables.scss
@@ -2,7 +2,7 @@
     --primary-clr1: #f899cc;
     --primary-clr2: #c599f8;
     --secondary-clr1: #ccf899;
-    --secondary-clr2: ##99f8c5;
+    --secondary-clr2: #99f8c5;
     --text: #232323;
     --white: #fff;
 
