--- a/frontend/src/assets/style/base/_helpers.scss
+++ b/frontend/src/assets/style/base/_helpers.scss
@@ -10,23 +10,23 @@
     flex-direction: column;
 }
 
-.flex.space-between {
+.space-between {
     justify-content: space-between;
 }
 
-.flex.space-evenly {
+.space-evenly {
     justify-content: space-evenly;
 }
 
-.flex.justify-center {
+.justify-center {
     justify-content: center;
 }
 
-.flex.align-center {
+.align-center {
     align-items: center;
 }
 
-.flex.center {
+.center {
     align-items: center;
     justify-content: center;
 }
