Add basic structure of login signup section

--- a/frontend/src/app/cmps/login-signup/login-signup.component.html
+++ b/frontend/src/app/cmps/login-signup/login-signup.component.html
@@ -1,1 +1,5 @@
-<p>login-signup works!</p>
+<section class="login-signup grid align-center">
+    <span class="user"></span>
+    <span class="wishlist"></span>
+    <span class="cart"></span>
+</section>
