--- a/frontend/src/app/cmps/login-signup/login-signup.component.scss
+++ b/frontend/src/app/cmps/login-signup/login-signup.component.scss
@@ -6,6 +6,7 @@
     span::before {
         font-family: fa-solid;
         color: var(--primary-clr2);
+        cursor: pointer;
     }
 
     span:hover::before {
