--- a/frontend/src/app/cmps/app-header/app-header.component.scss
+++ b/frontend/src/app/cmps/app-header/app-header.component.scss
@@ -16,6 +16,8 @@
             background-color: var(--white);
             display: grid;
             grid-template-columns: 1fr 1fr 1fr 3fr 1fr;
+            padding-block: 1rem;
+            gap: 24px;
 
             .logo {
                 font-family: jersey, Tahoma;
