Add font awesome brands font to project

--- a/frontend/src/assets/style/setup/_typography.scss
+++ b/frontend/src/assets/style/setup/_typography.scss
@@ -27,3 +27,8 @@
     font-family: fa-solid;
     src: url('../../fonts/fa-solid-900.ttf');
 }
+
+@font-face {
+    font-family: fa-brands;
+    src: url('../../fonts/fa-brands-400.ttf');
+}
