--- a/frontend/src/app/root-cmp/app.component.html
+++ b/frontend/src/app/root-cmp/app.component.html
@@ -1,5 +1,5 @@
 <section class="main-app">
   <app-header></app-header>
   <router-outlet></router-outlet>
-  <footer></footer>
+  <app-footer></app-footer>
 </section>
