Add basic structure to footer

--- a/frontend/src/app/cmps/app-footer/app-footer.component.html
+++ b/frontend/src/app/cmps/app-footer/app-footer.component.html
@@ -1,1 +1,5 @@
-<p>app-footer works!</p>
+<section class="footer">
+    <pre>
+        <span class="logo-in-footer">Manook</span> Created by Shoval S. , <span class="github-icon" alt="github icon, clickable"></span>
+    </pre>
+</section>
