Change symbol for readability

--- a/frontend/src/assets/style/setup/_typography.scss
+++ b/frontend/src/assets/style/setup/_typography.scss
@@ -1,6 +1,6 @@
 @font-face {
     font-family: jersey;
-    src: url("../../fonts/Jersey15-Regular.ttf");
+    src: url('../../fonts/Jersey15-Regular.ttf');
 }
 
 @font-face {
