Add styling properties to footer

--- a/frontend/src/app/cmps/app-footer/app-footer.component.html
+++ b/frontend/src/app/cmps/app-footer/app-footer.component.html
@@ -1,4 +1,4 @@
-<section class="footer">
+<section class="footer grid">
     <pre>
         <span class="logo-in-footer">Manook</span> Created by Shoval S. , <span class="github-icon" alt="github icon, clickable"></span>
     </pre>
