--- a/frontend/src/app/cmps/app-footer/app-footer.component.scss
+++ b/frontend/src/app/cmps/app-footer/app-footer.component.scss
@@ -1,6 +1,8 @@
 .footer {
+    grid-template-rows: 1fr;
+
     pre {
-        text-align: center;
+        grid-row: 1;
 
         .logo-in-footer {
             font-family: jersey, Tahoma;
