Edit styling properties of app header

--- a/frontend/src/app/cmps/app-header/app-header.component.scss
+++ b/frontend/src/app/cmps/app-header/app-header.component.scss
@@ -9,6 +9,8 @@
             background-color: var(--primary-clr1);
             text-align: center;
             padding: .5rem;
+            font-size: .6em;
+            opacity: 0.8;
         }
 
         .buttons-logo-container {
