Add styling classes to divs and edit text

--- a/frontend/src/app/cmps/login-signup/login-signup.component.html
+++ b/frontend/src/app/cmps/login-signup/login-signup.component.html
@@ -11,8 +11,10 @@
             <input type="password" placeholder="Password" />
             <button class="login-btn">Login</button>
         </div>
-        <h3>New here? Let's sign up real quick!</h3>
-        <button class="signup-btn">Sign-up</button>
+        <div class="sign-up-info grid">
+            <h3>New here? <br/> Let's sign up real quick!</h3>
+            <button class="signup-btn">Sign-up</button>
+        </div>
     </div>
     <span class="wishlist"></span>
     <span class="cart"></span>
