--- a/frontend/src/app/cmps/login-signup/login-signup.component.scss
+++ b/frontend/src/app/cmps/login-signup/login-signup.component.scss
@@ -27,6 +27,17 @@
         content: '\f07a';
     }
 
+    .layout {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 5;
+        opacity: 0.7;
+        background-color: var(--primary-clr1);
+    }
+
     .user-login-signup {
         grid-auto-flow: row;
         position: absolute;
