Create a basic structure for signup page

--- a/frontend/src/app/pages/user-signup/user-signup.component.html
+++ b/frontend/src/app/pages/user-signup/user-signup.component.html
@@ -1,1 +1,22 @@
-<p>user-signup works!</p>
+<section class="user-signup">
+    <form class="signup-form">
+        <label for="fullname">Full name</label>
+        <input type="text" id="fullname" placeholder="Full name" />
+        <label for="username">Username</label>
+        <input type="text" id="username" placeholder="Username" />
+        <label for="password">Password</label>
+        <input type="password" id="password" placeholder="Password" />
+        <label for="email">Email</label>
+        <input type="text" id="password" placeholder="Email" />
+        <label for="email">Gender</label>
+        <select id="gender">
+            <option value="male">Male</option>
+            <option value="woman">Woman</option>
+            <option value="other">Other</option>
+        </select>
+        <label for="subscription">Do you wish to subscribe to our newsletter?</label>
+        <input type="checkbox" id="subscription" />
+        <button>Submit</button>
+    </form>
+</section>
+
