Add basic styling properties to page

--- a/frontend/src/app/pages/user-signup/user-signup.component.html
+++ b/frontend/src/app/pages/user-signup/user-signup.component.html
@@ -1,5 +1,5 @@
 <section class="user-signup">
-    <form class="signup-form">
+    <form class="signup-form grid center">
         <label for="fullname">Full name</label>
         <input type="text" id="fullname" placeholder="Full name" />
         <label for="username">Username</label>
