Add styling properties to page

--- a/frontend/src/app/pages/user-signup/user-signup.component.html
+++ b/frontend/src/app/pages/user-signup/user-signup.component.html
@@ -14,9 +14,10 @@
             <option value="woman">Woman</option>
             <option value="other">Other</option>
         </select>
-        <label for="subscription">Do you wish to subscribe to our newsletter?</label>
-        <input type="checkbox" id="subscription" />
+        <div class="subscription-container grid">
+            <label for="subscription">Do you wish to subscribe to our newsletter?</label>
+            <input type="checkbox" id="subscription" />
+        </div>
         <button>Submit</button>
     </form>
 </section>
-
