--- a/frontend/src/app/pages/user-signup/user-signup.component.scss
+++ b/frontend/src/app/pages/user-signup/user-signup.component.scss
@@ -1,5 +1,15 @@
 .user-signup {
+
+    .signup-form,
+    .subscription-container {
+        gap: .5rem;
+    }
+
     .signup-form {
         grid-auto-flow: row;
+    }
+
+    .subscription-container {
+        grid-auto-flow: column;
     }
 }
