Add styling properties to page

--- a/frontend/src/app/pages/user-signup/user-signup.component.html
+++ b/frontend/src/app/pages/user-signup/user-signup.component.html
@@ -18,6 +18,6 @@
             <label for="subscription">Do you wish to subscribe to our newsletter?</label>
             <input type="checkbox" id="subscription" />
         </div>
-        <button>Submit</button>
+        <button class="subscription-btn">Submit</button>
     </form>
 </section>
