--- a/frontend/src/app/cmps/app-footer/app-footer.component.scss
+++ b/frontend/src/app/cmps/app-footer/app-footer.component.scss
@@ -1,7 +1,8 @@
 .footer {
     grid-template-rows: 1fr;
-    position: fixed;
+    position: relative;
     bottom: 0;
+    padding: 1rem;
 
     pre {
         grid-row: 1;
