Edit structure and add text to user signup page

--- a/frontend/src/app/pages/user-signup/user-signup.component.html
+++ b/frontend/src/app/pages/user-signup/user-signup.component.html
@@ -1,4 +1,5 @@
 <section class="user-signup">
+    <h1>Create an account</h1>
     <form class="signup-form grid center">
         <label for="fullname">Full name</label>
         <input type="text" id="fullname" placeholder="Full name" />
