Add styling properties to signup page

--- a/frontend/src/app/pages/user-signup/user-signup.component.scss
+++ b/frontend/src/app/pages/user-signup/user-signup.component.scss
@@ -28,6 +28,9 @@
         .subscription-btn {
             @include buttons2;
             padding: 1rem;
+            width: max-content;
+            justify-self: center;
+            margin-block-start: 1rem;
         }
     }
 
