--- a/frontend/src/app/cmps/app-header/app-header.component.html
+++ b/frontend/src/app/cmps/app-header/app-header.component.html
@@ -1,7 +1,7 @@
 <section class="app-header">
     <div class="discount-alert" *ngIf="discount.isDiscount">{{discount.sumOfDiscount}}% off everything! Hurry up!</div>
     <div class="buttons-logo-container grid">
-        <div class="logo flex center">Manook</div>
+        <div routerLink="/" class="logo flex center">Manook</div>
         <button class="women-btn">Women</button>
         <button class="men-btn">Men</button>
         <form class="flex align-center">
