--- a/frontend/src/app/cmps/app-header/app-header.component.scss
+++ b/frontend/src/app/cmps/app-header/app-header.component.scss
@@ -26,6 +26,7 @@
                 text-shadow: 2px 2px 0 #bcbcbc, 4px 4px 0 #9c9c9c;
                 font-size: 2.5em;
                 padding-inline-start: 1rem;
+                cursor: pointer;
             }
 
             form {
