--- a/frontend/src/app/pages/user-signup/user-signup.component.html
+++ b/frontend/src/app/pages/user-signup/user-signup.component.html
@@ -1,23 +1,23 @@
 <section class="user-signup">
     <h1>Create an account</h1>
-    <form class="signup-form grid center">
-        <label for="fullname">Full name</label>
-        <input type="text" id="fullname" placeholder="Full name" />
+    <form class="signup-form grid center" (submit)="onSubmitSignup($event)">
+        <label for="fullname" >Full name</label>
+        <input type="text" id="fullname" name="fullname" placeholder="Full name" [(ngModel)]="newUser.fullName"/>
         <label for="username">Username</label>
-        <input type="text" id="username" placeholder="Username" />
+        <input type="text" id="username" name="username" placeholder="Username" [(ngModel)]="newUser.username" />
         <label for="password">Password</label>
-        <input type="password" id="password" placeholder="Password" />
+        <input type="password" id="password" name="password" placeholder="Password" [(ngModel)]="newUser.password"/>
         <label for="email">Email</label>
-        <input type="text" id="password" placeholder="Email" />
+        <input type="text" id="email" name="email" placeholder="Email" [(ngModel)]="newUser.email"/>
         <label for="email">Gender</label>
-        <select id="gender">
+        <select id="gender" name="gender" [(ngModel)]="newUser.gender">
             <option value="male">Male</option>
             <option value="woman">Woman</option>
             <option value="other">Other</option>
         </select>
         <div class="subscription-container grid">
             <label for="subscription">Do you wish to subscribe to our newsletter?</label>
-            <input type="checkbox" id="subscription" />
+            <input type="checkbox" id="subscription" name="subscription" [(ngModel)]="newUser.isSubscribed"/>
         </div>
         <button class="subscription-btn">Submit</button>
     </form>
