Add cmp to home page

--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -3,4 +3,5 @@
         <img class="home-pic" src="../../../assets/pics/homepage/1.jpeg" alt="girl in y2k fashion" />
         <div class="layout">Start a new journey</div>
     </div>
+    <home-clothing-item-preview></home-clothing-item-preview>
 </section>
