--- a/frontend/src/app/pages/home/home.component.scss
+++ b/frontend/src/app/pages/home/home.component.scss
@@ -1,5 +1,5 @@
 .home {
-    grid-template-columns: minmax(20px, 10%) 1fr minmax(20px, 1fr);
+    grid-template-columns: minmax(20px, 10%) 1fr minmax(20px, 10%);
     width: 100%;
 
     .layout-container {
