Update grid column in each component or element inside home page

--- a/frontend/src/app/cmps/home-clothing-item-preview/home-clothing-item-preview.component.scss
+++ b/frontend/src/app/cmps/home-clothing-item-preview/home-clothing-item-preview.component.scss
@@ -1,15 +1,18 @@
-.home-clothing-item-preview {
-    grid-auto-flow: column;
+:host {
+    grid-column: 2;
 
-    .clothing-item {
-        color: var(--text);
-        grid-auto-flow: row;
-        max-width: 20vw;
+    .home-clothing-item-preview {
+        grid-auto-flow: column;
 
-        img {
-            object-fit: cover;
+        .clothing-item {
+            color: var(--text);
+            grid-auto-flow: row;
             max-width: 100%;
-            height: 350px;
+
+            img {
+                object-fit: cover;
+                max-width: 100%;
+            }
         }
     }
 }
