--- a/frontend/src/app/pages/home/home.component.scss
+++ b/frontend/src/app/pages/home/home.component.scss
@@ -1,10 +1,10 @@
 .home {
-    grid-template-columns: minmax(20px, 10%) 1fr minmax(20px, 10%);
+    grid-template-columns: minmax(20px, 5%) 1fr minmax(20px, 5%);
     width: 100%;
 
     .layout-container {
         position: relative;
-        grid-column: 1 / -1;
+        grid-column: 2;
 
         .home-pic {
             object-fit: contain;
