Add font to typography file

--- a/frontend/src/assets/style/setup/_typography.scss
+++ b/frontend/src/assets/style/setup/_typography.scss
@@ -1,23 +1,12 @@
 @font-face {
-    font-family: jersey;
-    src: url('../../fonts/Jersey15-Regular.ttf');
+    font-family: fira-light;
+    src: url('../../fonts/FiraSans-Light.ttf');
 }
 
 @font-face {
-    font-family: cp-bold;
-    src: url('../../fonts/CourierPrime-Bold.ttf');
+    font-family: fira-reg;
+    src: url('../../fonts/FiraSans-Regular.ttf');
 }
-
-@font-face {
-    font-family: cp-bold-italic;
-    src: url('../../fonts/CourierPrime-BoldItalic.ttf');
-}
-
-@font-face {
-    font-family: cp-reg;
-    src: url('../../fonts/CourierPrime-Regular.ttf');
-}
-
 @font-face {
     font-family: cp-italic;
     src: url('../../fonts/CourierPrime-Italic.ttf');
