--- a/frontend/src/assets/style/base/_base.scss
+++ b/frontend/src/assets/style/base/_base.scss
@@ -2,6 +2,6 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: cp-reg, 'Courier New', Courier, monospace;
+    font-family: fira-light, Tahoma;
     color: var(--text);
 }
