--- a/frontend/src/app/cmps/home-clothing-item-preview/home-clothing-item-preview.component.scss
+++ b/frontend/src/app/cmps/home-clothing-item-preview/home-clothing-item-preview.component.scss
@@ -3,15 +3,29 @@
 
     .home-clothing-item-preview {
         grid-auto-flow: column;
+        gap: .5rem;
+        justify-content: space-between;
 
         .clothing-item {
             color: var(--text);
             grid-auto-flow: row;
-            max-width: 100%;
+            justify-items: center;
+            
+            max-width: 350px;
+            gap: .3rem;
+            
+            h1 {
+                font-size: 1em;
+                font-family: fira-reg, Tahoma;
+                margin-block: .5em;
+            }
 
             img {
                 object-fit: cover;
-                max-width: 100%;
+                width: 100%;
+                height: 320px;
+                display: block;
+                cursor: pointer;
             }
         }
     }
