--- a/frontend/src/app/pages/home/home.component.scss
+++ b/frontend/src/app/pages/home/home.component.scss
@@ -9,6 +9,8 @@
         .home-pic {
             object-fit: contain;
             max-width: 100%;
+            display: block;
+            margin-block-end: .5rem;
         }
 
         .layout {
