--- a/frontend/src/app/cmps/app-header/app-header.component.html
+++ b/frontend/src/app/cmps/app-header/app-header.component.html
@@ -2,10 +2,10 @@
     <div class="discount-alert" *ngIf="discount.isDiscount">{{discount.sumOfDiscount}}% off everything! Hurry up!</div>
     <div class="buttons-logo-container grid">
         <div routerLink="/" class="logo flex center">Manook</div>
-        <button class="women-btn">Women</button>
-        <button class="men-btn">Men</button>
+        <button routerLink="clothing-item" class="women-btn">Women</button>
+        <button routerLink="clothing-item" class="men-btn">Men</button>
         <form class="flex align-center">
-            <input type="text" placeholder="What are we buying today?" />
+            <input type="text" [(ngModel)]="filterBy.name" (ngModelChange)="onSetFilter($event)" placeholder="What are we buying today?" />
             <button class="search-btn"></button>
         </form>
 
