Change the way of subscription to data from service in component

--- a/frontend/src/app/pages/clothing-item-index/clothing-item-index.component.html
+++ b/frontend/src/app/pages/clothing-item-index/clothing-item-index.component.html
@@ -1,6 +1,6 @@
 <section class="clothing-item-index grid">
-    <article *ngFor="let clothingItem of clothingItems">
-        <img [src]="clothingItem.imgUrl">
+    <article *ngFor="let clothingItem of clothes$">
+        <img [src]="clothingItem.imgUrl || clothingItem.imgUrl[0]">
         <h1>{{clothingItem.name}}</h1>
         <h3>{{clothingItem.type}}</h3>
         <p>{{clothingItem.desc}}</p>
