Return jersey font to typography file

--- a/frontend/src/assets/style/setup/_typography.scss
+++ b/frontend/src/assets/style/setup/_typography.scss
@@ -21,3 +21,8 @@
     font-family: fa-brands;
     src: url('../../fonts/fa-brands-400.ttf');
 }
+
+@font-face {
+    font-family: jersey;
+    src: url('../../../assets/fonts/Jersey15-Regular.ttf');
+}
