Add structure to clothing item list

--- a/frontend/src/app/cmps/clothing-item-list/clothing-item-list.component.html
+++ b/frontend/src/app/cmps/clothing-item-list/clothing-item-list.component.html
@@ -1,1 +1,7 @@
-<p>clothing-item-list works!</p>
+<ng-container *ngIf="clothes">
+    <section class="clothing-items-list grid">
+        <clothing-item-preview *ngFor="let clothingItem of clothes" [clothingItem]="clothingItem">
+        </clothing-item-preview>
+    </section>
+</ng-container>
+<router-outlet></router-outlet>
