Edit user actions div in clothing item preview component

--- a/frontend/src/app/cmps/clothing-item-preview/clothing-item-preview.component.html
+++ b/frontend/src/app/cmps/clothing-item-preview/clothing-item-preview.component.html
@@ -6,5 +6,8 @@
     <div class="user-actions">
         <span class="cart"></span>
         <span class="wishlist"></span>
+        <span *ngIf="user && user.isAdmin" class="deletion"></span>
+        <span class="details"></span>
     </div>
 </article>
+
