--- a/frontend/src/app/cmps/clothing-item-list/clothing-item-list.component.scss
+++ b/frontend/src/app/cmps/clothing-item-list/clothing-item-list.component.scss
@@ -1,5 +1,5 @@
 .clothing-items-list {
         grid-template-columns: repeat(3, minmax(350px, 1fr));
-        gap: .5rem;
+        gap: 1rem;
     
     }
