--- a/frontend/src/app/cmps/clothing-item-preview/clothing-item-preview.component.html
+++ b/frontend/src/app/cmps/clothing-item-preview/clothing-item-preview.component.html
@@ -3,7 +3,7 @@
     <h1>{{clothingItem.name}}</h1>
     <p>{{clothingItem.desc}}</p>
     <h3>${{clothingItem.price}}</h3>
-    <div class="user-actions">
+    <div class="user-actions grid">
         <span class="cart" (click)="onAddItemToCart(clothingItem)"></span>
         <span class="wishlist"></span>
         <span *ngIf="user && user.isAdmin" class="deletion"></span>
